# planka-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
crates/plnk-cli/: Cargo.toml
crates/plnk-cli/src/: app.rs  help.rs  input.rs  main.rs
crates/plnk-cli/src/commands/: attachment.rs  auth.rs  board.rs  card.rs  card_assignee.rs  card_label.rs  comment.rs  init.rs  label.rs  list.rs  membership.rs  mod.rs  project.rs  task.rs  user.rs
crates/plnk-cli/src/output/: json.rs  markdown.rs  mod.rs  table.rs
crates/plnk-cli/tests/: cli_aliases.rs  cli_auth.rs  cli_help.rs  cli_transport.rs  e2e_card_get_many.rs  e2e_card_label_filter.rs  e2e_errors.rs  e2e_output.rs  e2e_project.rs
crates/plnk-core/: Cargo.toml
crates/plnk-core/src/: error.rs  lib.rs  transport.rs
crates/plnk-core/src/api/: mod.rs  responses.rs  search.rs  traits.rs  v1.rs
crates/plnk-core/src/auth/: config.rs  login.rs  mod.rs
crates/plnk-core/src/client/: mod.rs
crates/plnk-core/src/models/: attachment.rs  board.rs  card.rs  comment.rs  common.rs  label.rs  list.rs  membership.rs  mod.rs  project.rs  task.rs  tests.rs  user.rs
crates/plnk-core/tests/: auth_login.rs  card_get_many.rs  http_client.rs
crates/plnk-tui/: Cargo.toml
crates/plnk-tui/src/: main.rs
docs/: _config.yml  boards.md  cards.md  comments.md  index.html  labels.md  projects.md  tasks.md  transport.md  tui-tree-view.md  users.md
docs/_layouts/: post.html
docs/blogs/: the-long-way-back-to-planka.md
docs/cli/: attachments.md  auth.md  comments.md  examples.md  grammar.md  lists.md  memberships.md  projects.md  tasks.md
docs/tui/: fast-copy.md  keybindings.md  live-target.md  overview.md  tree-view.md
skills/plnk-cli/: README.md  SKILL.md
skills/plnk-cli/references/: api-quirks.md  commands.md
