[workspace]
members = ["crates/plnk-core", "crates/plnk-cli", "crates/plnk-tui"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.87"
license = "MIT"
repository = "https://github.com/plattnum/planka-cli"
homepage = "https://github.com/plattnum/planka-cli"
keywords = ["planka", "kanban", "cli", "project-management"]
categories = ["command-line-utilities"]

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

# HTTP & Async
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
async-trait = "0.1"
url = { version = "2", features = ["serde"] }

# CLI
clap = { version = "4", features = ["derive", "env"] }
comfy-table = "7"
rpassword = "7"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dirs = "6"

# Internal
plnk-core = { path = "crates/plnk-core", version = "0.2.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow common pedantic false positives
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
