[package]
name = "plnk-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "CLI for Planka kanban boards"

[[bin]]
name = "plnk"
path = "src/main.rs"

[dependencies]
plnk-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
comfy-table = { workspace = true }
rpassword = { workspace = true }
url = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
